refactor: Update Vercel config and package.json
Adjust Vercel configuration for improved deployment and remove unnecessary build scripts from package.json.

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 
 {
+  "version": 2,
+  "outputDirectory": ".",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ],
-  "framework": null,
-  "installCommand": "npm install --no-package-lock",
-  "buildCommand": "echo 'Ready'"
+  "cleanUrls": true
 }
