refactor: Update Node version and Vercel config
Pin the Node.js engine to exactly `20.x` for consistency.
Update `vercel.json` by removing redundant `framework` property and ensuring `cleanUrls` is correctly placed.

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,9 @@
 {
   "version": 2,
   "outputDirectory": ".",
+  "cleanUrls": true,
+  "framework": null,
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
-  ],
-  "cleanUrls": true
+  ]
 }
